# se-toolkit-lab-8

./: .env.docker.example  .gitmodules  README.md  REPORT.md  docker-compose.yml  pyproject.toml
.qwen/: settings.json
backend/app/routers/: analytics.py
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
docs/design/: architecture.md
frontend/: package-lock.json  package.json  vite.config.ts
instructors/: lab-plan.md
instructors/file-reviews/lab/tasks/required/: task-1.md
lab/setup/: setup-simple.md
lab/tasks/: setup-simple.md  setup.md
lab/tasks/optional/: task-1.md
lab/tasks/required/: task-1.md  task-2.md  task-3.md  task-4.md  task-5.md
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __main__.py  client.py  server.py  settings.py  tools.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
wiki/: dotenv-docker-secret.md  git-workflow.md  nanobot.md  nodejs.md  python.md  vs-code.md
